--- a/package.json
+++ b/package.json
@@ -8,7 +8,25 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.8.0",
-    "eslint-plugin-prettier": "^3.1.2"
+    "eslint-config-problems": "^3.0.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "husky": "^3.1.0",
+    "mocha": "^6.2.2",
+    "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "scripts": {
+    "start": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js",
+    "lint": "eslint --fix --ext .js .",
+    "test": "mocha test && yarn lint"
   }
 }
