--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "express": "^4.17.1"
   },
   "scripts": {
-    "start": "node ./src/index.js",
-    "dev": "nodemon ./src/index.js",
+    "start": "node ./app.js",
+    "dev": "nodemon ./app.js",
     "lint": "eslint --fix --ext .js .",
     "test": "mocha test && yarn lint"
   }
