--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "pretty-quick": "^2.0.1"
   },
   "dependencies": {
+    "db-migrate": "^0.11.6",
     "db-migrate-pg": "^1.0.0",
     "express": "^4.17.1",
+    "global": "^4.4.0",
     "pg": "^7.16.0"
   },
   "scripts": {
