--- a/package.json
+++ b/package.json
@@ -1,35 +1,16 @@
 {
   "name": "pizza-delivery-backend",
-  "version": "1.0.0",
-  "description": "This repository is for a practicing making server using Express.js",
-  "main": "index.js",
-  "repository": "https://github.com/ccx-projects/pizza-delivery-backend.git",
-  "author": "NaoArimura <naoyosetani@gmail.com>",
-  "license": "MIT",
-  "private": false,
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.8.0",
-    "eslint-config-problems": "^3.0.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "husky": "^3.1.0",
-    "mocha": "^6.2.2",
-    "nodemon": "^2.0.2",
-    "prettier": "^1.19.1",
-    "pretty-quick": "^2.0.1"
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "db-migrate": "^0.11.6",
-    "db-migrate-pg": "^1.0.0",
-    "express": "^4.17.1",
-    "pg": "^7.16.0"
-  },
-  "scripts": {
-    "start": "node ./app.js",
-    "dev": "nodemon ./app.js",
-    "lint": "eslint --fix --ext .js .",
-    "test": "mocha test && yarn lint"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   }
 }
