--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
-    "pg": "^7.16.0"
+    "pg": "^7.16.0",
+    "pg-promise": "^10.3.2"
   },
   "scripts": {
     "start": "node ./bin/www",
